Exempted rpx_response and associate_rpx_response from CSRF protection (especially relevant when using django 1.2).

--- a/example/app/templates/django_rpx_plus/register.html
+++ b/example/app/templates/django_rpx_plus/register.html
@@ -23,6 +23,7 @@
 </p>
 
 <form action="" method="post" name="profile_form" id="profile_form">
+    {# NOTE: If you are using django 1.2, you'll need to add the csrf token here #}
     {{ form.as_p }}
     <div class="actions">
         <button type="submit" name="submit" value="Save">Save &raquo;</button>
